add google map and divCapabilities and lightbar and platoon and geofence and lane change

--- a/website/styles/main.css
+++ b/website/styles/main.css
@@ -135,6 +135,25 @@ canvas
     color:rgb(239, 189, 39) ;
     font-size: 85%;
 }
+#divCapabilitiesArea
+{
+   
+    display: block;
+    width: 40vw;
+    margin: auto;
+    z-index: 20;
+    position: absolute;
+    float: none;
+    left: 43vw;
+}
+#divCapabilitiesContent{
+    position: relative;
+    color: #ffc107;
+    font-size: 70%;
+    border: 1px solid white;
+    border-radius: 15px;
+    padding: 10px;
+}
 a:hover, a:active, a.active
 {
     color:  rgb(167, 223, 57) !important;
@@ -150,7 +169,7 @@ a.custom-nav
     right: 0;
     width: 30vw ;
     height: calc(100vh - 140px);
-    opacity: 70%;
+    opacity: 85%;
     position: absolute;    
     overflow-y: auto;  
     z-index: 999;  
@@ -176,6 +195,10 @@ hr{
 #right-panel .card {
     border-radius: 15px;
 }
+
+#right-panel .card-body {
+    padding:5px;
+}
 #right-panel .card .card-header{
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
@@ -183,7 +206,7 @@ hr{
 /* status panel */
 #status-panel{
     overflow: hidden;
-    height: 60%;
+    height: 70%;
 }
 #status-panel .card{
     overflow: hidden;
@@ -208,7 +231,14 @@ hr{
 #status-panel .table-dark thead th{
  border-top-color: black;
 }
-
+#status-panel .systemversion-card-footer{
+    display: block;
+    margin: 0px ;
+    padding: 5px 0px;
+    font-size: 70%;
+    text-align: center;
+    background-color: #1a1a1a !important
+}
 /**logs panel***/
 #logs-panel{
     height: 60%;
@@ -234,6 +264,18 @@ hr{
  #logs-panel .log-content::-webkit-scrollbar-thumb{
      background-color: white;
  }
+
+ #maps-panel{
+    height: 60%;
+ }
+ #maps-panel .card-body{
+     padding: 0px !important;
+ }
+#maps-panel .map-content,#maps-panel .card{
+    height: 100%;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
 
 .card-custom-header{
     color:  rgb(167, 223, 57)  !important;
