--- a/website/styles/main.css
+++ b/website/styles/main.css
@@ -123,7 +123,6 @@ canvas
     /**width: calc(100vw - 600px) !important;
     margin-right: 600px;**/
     width:100vw !important;
-    padding-right: 20px;
 }
 #route-list-area{
     height: calc(100vh - 140px) !important;
@@ -271,7 +270,7 @@ hr{
  #maps-panel .card-body{
      padding: 0px !important;
  }
-#maps-panel .map-content,#maps-panel .card{
+#maps-panel #load-map,#maps-panel .card{
     height: 100%;
     border-bottom-right-radius: 10px;
     border-bottom-left-radius: 10px;
