--- a/website/styles/main.css
+++ b/website/styles/main.css
@@ -145,6 +145,7 @@ canvas
     position: absolute;
     float: none;
     left: 43vw;
+    bottom: 80px;
 }
 #divCapabilitiesContent{
     position: relative;
