--- a/website/styles/main.css
+++ b/website/styles/main.css
@@ -175,6 +175,25 @@ canvas
 }
 
 
+
+#divEventStatusArea
+{
+    display: block;
+    max-width: 50vw;
+    margin: auto;
+    z-index: 20;
+    position: absolute;
+    float: none;
+    left: 43vw;
+    bottom: 210px;
+}
+
+#divEventStatusContent{
+    position: relative;
+    color: white;
+    font-size: 70%;
+}
+
 a:hover, a:active, a.active
 {
     color:  rgb(167, 223, 57) !important;
