--- a/website/styles/main.css
+++ b/website/styles/main.css
@@ -194,6 +194,25 @@ canvas
     font-size: 70%;
 }
 
+
+#divERVStatusArea
+{
+    display: block;
+    max-width: 50vw;
+    margin: auto;
+    z-index: 1000;
+    position: absolute;
+    float: none;
+    left: 43vw;
+    bottom: 80px;
+}
+
+#divERVStatusContent{
+    position: relative;
+    color: white;
+    font-size: 70%;
+}
+
 a:hover, a:active, a.active
 {
     color:  rgb(167, 223, 57) !important;
